# itba-cloud-data-engineering-python-data-app

./: docker-compose.yaml  pyproject.toml  requirements-dev.txt
.github/workflows/: github-action-test.yml  github-actions-pytest.yml
App/dags/: extract_stock_data.py  models.py  stock_dag.py
App/dbinit/: initModel.py
App/logs/scheduler/: latest
dags/: postgresClient.py  stock_dag.py
db/: postgresClient.py
dbinit/: 01-init.sh  initModel.py
tests/: test_getStockData.py
