[tool.poetry]
name = "tp2"
version = "0.1.0"
description = "TP2"
authors = ["Lucas Mattar"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
requests = "^2.26.0"
matplotlib = "^3.4.3"
tk = "^0.1.0"
app = "^0.0.1"
apache-airflow = "^2.2.2"
pysqlite3 = "^0.4.6"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
